# LD3

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: gate0.yaml  gate0_K6.yaml  gate0_K8.yaml  gate0_ablation.yaml  gate0_density.yaml  gate0_oversampling.yaml  gate1.yaml  gate1_K6_estimated.yaml  gate1_K8_estimated.yaml  gate1_boundary.yaml  gate1_boundary_estimated.yaml  gate1_estimated.yaml  gate1_main.yaml  gate1_multisnr.yaml  gate1_stress.yaml  gate1_stress_estimated.yaml  gate2_ablate.yaml  gate2_canonical.yaml  gate2_canonical_oracle.yaml  gate2_corruption.yaml  gate2_corruption_aware.yaml  gate2_moe.yaml  gate2_nozero.yaml  gate2_omp.yaml  gate2_omp_patch.yaml  gate2_omp_refiner.yaml  gate2_os48.yaml  gate2_p0_optimize.yaml  gate2_path_stats.yaml  gate2_phase03.yaml  gate2_safe.yaml  gate2_safety.yaml  gate2_snr10_test.yaml  gate2_snr5_20_test.yaml  gate2_token_v3.yaml  gate2_v1_sup_aug.yaml  gate2_v3_aug.yaml  gate2_vp_fast.yaml  gate2_vp_optimize.yaml  gate2_vp_precomp.yaml
docs/: EXPERIMENTS.md  GATE2_DESIGN.md  IMPLEMENTATION_STATUS.md  RESEARCH_REPORT.md
experiments/: baselines_safety.py  gate0_identifiability.py  gate1_oracle.py  gate2_corruption.py
results/baselines_safety/: baselines_safety.json
results/gate0/: gate0_ambiguity.csv  gate0_coherence.csv  gate0_paired_bootstrap.csv  gate0_summary.csv  manifest.json
results/gate0_K6/: gate0_summary.csv  gate0_trials.csv  manifest.json
scripts/: precompute_tokens.py
tests/: test_channel.py  test_dd_estimation.py  test_models.py  test_oracle_closure.py
(+92 files in other folders)
