[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ld3-ofdm-isac"
version = "0.1.0"
description = "Gate-based validation for physics-guided TF-DD OFDM-ISAC channel estimation"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]
